# fabrix

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/drivers/: vga.rs
src/kernel/: init.rs  mod.rs
src/kernel/interrupts/: idt.rs  mod.rs
src/kernel/startup/: boot.rs  mod.rs
src/libs/: stack.rs
