[package]
name = "fabrix"
version = "0.1.0"
edition = "2024"
authors = ["Fabrizio Franco <fabrizio.software.dev@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9"